--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,17 @@
   ],
   "routes": [
     {
+      "src": "/(.*\\.(js|css|html|png|jpg|jpeg|gif|svg|mp4|webm|ogg|mp3|wav|json))",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      },
+      "dest": "/public/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
